Убрал StringUtils.isBlank(name) и использовал name.isBlank()